--- a/css/main.css
+++ b/css/main.css
@@ -1,61 +1,8 @@
-/* Google Fonts */
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro); /* Global */
-html {
-    min-height: 100%;
-    overflow: scroll;
-}
-
-body {
-    height: calc(100vh - 8em);
-    padding: 4em;
-    color: rgba(255,255,255,.75);
-    font-family: 'Anonymous Pro', monospace;
-    background-color: rgb(25,25,25);
-}
-
-.line-1 {
-    position: relative;
-    top: 50%;
-    width: 24em;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);
-}
-
-/* Animation */
-.anim-typewriter {
-    animation: typewriter 4s steps(44) 1s 1 normal both, blinkTextCursor 500ms steps(44) infinite normal;
-}
-
-@keyframes typewriter {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 24em;
-    }
-}
-
-@keyframes blinkTextCursor {
-    from {
-        border-right-color: rgba(255,255,255,.75);
-    }
-
-    to {
-        border-right-color: transparent;
-    }
-}
-
 /* Progress bar ======================= */
 .bar-1, .bar-3 {
     position: fixed;
     height: 8px;
-    background-color: #5de851;
+    background-color: #3b8334;
     z-index: 900;
     width: 0%;
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.18);
@@ -64,7 +11,7 @@ body {
 .bar-2, .bar-4 {
     position: fixed;
     width: 8px;
-    background-color: #5de851;
+    background-color: #3b8334;
     z-index: 900;
     height: 0%;
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.18);
@@ -89,8 +36,11 @@ body {
     bottom: 0;
     left: 0;
 }
+/* End of progress bar ======================= */
 
-
+::-webkit-scrollbar {
+    width: 0 !important
+}
 
 section {
     height: 100vh;
