--- a/css/main.css
+++ b/css/main.css
@@ -17,34 +17,32 @@
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.18);
 }
 
-.bar-1 {
-    top: 0;
-    left: 0;
-}
+.bar-1 {top: 0; left: 0;}
+.bar-2 {top: 0; right: 0;}
+.bar-3 {bottom: 0; right: 0;}
+.bar-4 {bottom: 0; left: 0;}
 
-.bar-2 {
-    top: 0;
-    right: 0;
-}
-
-.bar-3 {
-    bottom: 0;
-    right: 0;
-}
-
-.bar-4 {
-    bottom: 0;
-    left: 0;
-}
 /* End of progress bar ======================= */
 
 /* Menu ======================= */
-#navMenuIcon {
+#navbarMenu {
     position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
 }
 
-#navbarMenu {
-    display: none;
+#navMenuIcon {
+    position: fixed;
+    right: 3%;
+    top: 4%;
 }
 
 ::-webkit-scrollbar {
