--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 /* Progress bar ======================= */
 .bar-1, .bar-3 {
     position: fixed;
-    height: 8px;
-    background-color: #3b8334;
+    height: 4px;
+    background-color: #b9b9b9;
     z-index: 900;
     width: 0%;
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.18);
@@ -10,8 +10,8 @@
 
 .bar-2, .bar-4 {
     position: fixed;
-    width: 8px;
-    background-color: #3b8334;
+    width: 4px;
+    background-color: #b9b9b9;
     z-index: 900;
     height: 0%;
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.18);
@@ -34,7 +34,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(99, 99, 99, 0.5);
     z-index: 2;
     cursor: pointer;
 }
@@ -43,6 +43,7 @@
     position: fixed;
     right: 3%;
     top: 4%;
+    outline: none;
 }
 
 ::-webkit-scrollbar {
