--- a/css/main.css
+++ b/css/main.css
@@ -25,22 +25,57 @@
 /* End of progress bar ======================= */
 
 /* Menu ======================= */
-#navbarMenu {
-    position: fixed;
-    display: none;
-    width: 100%;
+body {
+    font-family: Arial;
+}
+
+.overlay {
     height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5);
+    width: 0;
+    position: fixed;
     z-index: 2;
-    cursor: pointer;
+    top: 0;
+    right: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.7);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #f1f1f1;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #037FD5;
+}
+
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay {
+    font-size: 40px;
+    top: 15px;
+    left: 35px;
+  }
 }
 
 #navMenuIcon {
     position: fixed;
+    z-index: 3;
     right: 3%;
     top: 4%;
 }
