--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 .bar-1, .bar-3 {
     position: fixed;
     height: 4px;
-    background-color: #b9b9b9;
+    background-color: #666;
     z-index: 900;
     width: 0%;
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.18);
@@ -11,7 +11,7 @@
 .bar-2, .bar-4 {
     position: fixed;
     width: 4px;
-    background-color: #b9b9b9;
+    background-color: #666;
     z-index: 900;
     height: 0%;
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.18);
