--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 .bar-1, .bar-3 {
     position: fixed;
     height: 4px;
-    background-color: #666;
+    background-color: #fff;
     z-index: 900;
     width: 0%;
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.18);
@@ -11,7 +11,7 @@
 .bar-2, .bar-4 {
     position: fixed;
     width: 4px;
-    background-color: #666;
+    background-color: #fff;
     z-index: 900;
     height: 0%;
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.18);
@@ -24,72 +24,101 @@
 
 /* End of progress bar ======================= */
 
-/* Menu ======================= */
+/* Side menu ===========================*/
+.pagination {
+	position:fixed;
+	right:20px;
+	top: 50%;
+    transform: translateY(-50%);
+
+	font-size:1.4em;
+	z-index: 10;
+}
+.pagination a {
+	display:block;
+	height:20px;
+	margin-bottom:5px;
+	color:white;
+	position:relative;
+	padding:4px;
+}
+.pagination a.active:after {
+	box-shadow:inset 0 0 0 5px;
+}
+.pagination a .hover-text {
+	position:absolute;
+	right:15px;
+	top:7px;
+	opacity:0;
+	-webkit-transition: opacity 0.5s ease;
+	transition: opacity 0.5s ease;
+	padding-right: 15px;
+}
+.pagination a:hover .hover-text {
+	opacity: 1;
+}
+.pagination a:after {
+	-webkit-transition:box-shadow 0.5s ease;
+	transition:box-shadow 0.5s ease;
+	width:10px;
+	height:10px;
+	display: block;
+	border:1px solid;
+	border-radius:50%;
+	content:'';
+	position: absolute;
+	margin:auto;
+	top:0;
+	right:4px;
+	bottom:0;
+}
+/* End Side menu ================= */
+
+/* General ======================*/
 body {
-    font-family: Arial;
+	color:white;
+    font-family: 'Lato', sans-serif;
+    line-height: 1;
 }
 
-.overlay {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 100;
-    top: 0;
-    right: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.7);
-    overflow-x: hidden;
-    transition: 0.5s;
+.home {
+	background:#6dcb94;
+	background:hsl(158,58%,52%);
+}
+.about {
+	background:#ec8200;
+	background:hsl(28,100%,52%);
+}
+.projects {
+	background:#64a0d4;
+	background:hsl(200,60%,55%);
+}
+.contact {
+	background:#e14456;
+	background:hsl(350,92%,59%);
 }
 
-.overlay-content {
-    position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
+ol, ul {
+	list-style: none;   
 }
 
-.overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px;
-    color: #f1f1f1;
-    display: block;
-    transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-    color: #037FD5;
-}
-
-
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay {
-    font-size: 40px;
-    top: 15px;
-    left: 35px;
-  }
-}
-
-#navMenuIcon {
-    position: fixed;
-    z-index: 200;
-    right: 3%;
-    top: 4%;
-    outline: none;
-}
-
-::-webkit-scrollbar {
-    width: 0 !important
-}
-
-section {
-    height: 100vh;
-}
-
-.blurBg {
-    filter: blur(3px);
-    -webkit-filter: blur(3px);
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
