--- a/css/main.css
+++ b/css/main.css
@@ -68,10 +68,14 @@ body {
     line-height: 1;
 }
 
-.home {
-	background:#6dcb94;
-	background:hsl(158,58%,52%);
+#logo{
+	position: fixed;
+	height: 10%;
+	width: 5%;
+	margin-top: 2%;
+	margin-left: 2%;
 }
+
 .about {
 	background:#ec8200;
 	background:hsl(28,100%,52%);
@@ -87,6 +91,16 @@ body {
 
 ol, ul {
 	list-style: none;   
+}
+
+video {
+	width:100%;
+	height:100%;
+	position: absolute;
+	top:0;
+	left:0;
+	object-fit:fill;
+	z-index: -1;
 }
 
 html, body, div, span, applet, object, iframe,
