--- a/css/main.css
+++ b/css/main.css
@@ -35,11 +35,13 @@
 .pagination a .hover-text {
 	position:absolute;
 	right:15px;
-	top:7px;
+	top:1px;
 	opacity:0;
 	-webkit-transition: opacity 0.5s ease;
 	transition: opacity 0.5s ease;
 	padding-right: 15px;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: medium 
 }
 .pagination a:hover .hover-text {
 	opacity: 1;
