--- a/css/main.css
+++ b/css/main.css
@@ -35,13 +35,13 @@
 .pagination a .hover-text {
 	position:absolute;
 	right:15px;
-	top:1px;
+	top:3px;
 	opacity:0;
 	-webkit-transition: opacity 0.5s ease;
 	transition: opacity 0.5s ease;
 	padding-right: 15px;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	font-size: medium 
+	font-size: small 
 }
 .pagination a:hover .hover-text {
 	opacity: 1;
@@ -73,7 +73,7 @@ body {
 #logo{
 	position: fixed;
 	height: 10%;
-	width: 5%;
+	width: 10%;
 	margin-top: 2%;
 	margin-left: 2%;
 }
