--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,8 +90,10 @@ body {
 	background:hsl(200,60%,55%);
 }
 .contact {
-	background:#e14456;
-	background:hsl(350,92%,59%);
+	background: url("../img/cityMap1.jpg") no-repeat center center fixed;
+	background-size: cover;
+	height: 100%;
+	overflow: hidden;
 }
 
 ol, ul {
