--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,7 +90,7 @@ body {
 	background:hsl(200,60%,55%);
 }
 .contact {
-	background: url("../img/cityMap1.jpg") no-repeat center center fixed;
+	background: url("../img/cityMap1.jpg") no-repeat center center;
 	background-size: cover;
 	height: 100%;
 	overflow: hidden;
