--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,15 +1,14 @@
 /* import this code: https://codepen.io/mattstvartak/pen/amWAVA */
 @import url('https://fonts.googleapis.com/css?family=Audiowide');
-.wrapper div{
+.wrapperDesktop div{
     margin-bottom: 50px;
 }
-.wrapper {
+.wrapperDesktop {
     text-align: center;
     position: absolute;
-    top: 20%;
+    top: 10%;
     left: 50%;
     width: 90%;
-    font-size: 0;
     transform: translate(-50%);
   }
   .letter {
@@ -20,13 +19,11 @@
     overflow: hidden;
     margin: 0 0;
     font-family: Audiowide;
-    font-size: 60px;
+    font-size: xx-large;
     font-weight: 600;
     line-height: 60px;
     text-transform: uppercase;
-    color: #eee;
-  }
-  @media (max-width: 625px) {
+    color: rgb(0, 196, 0);
   }
   .letter:before {
     position: absolute;
@@ -36,6 +33,35 @@
     word-break: break-all;
     background-color: #1d1f20;
   }
+
+  .wrapperMobile{
+    display: none;
+  }
+    @media screen and (max-width: 625px) {
+      .wrapperMobile{
+        display: block;
+        text-align: center;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        width: 90%;
+        font-size: 0;
+        transform: translate(-50%);
+      }
+      .letter{
+        width: 30px;
+      }
+      .wrapperMobile div{
+        margin-bottom: 30px;
+    }
+      .wrapperDesktop{
+        display: none;
+      }
+      #logo{
+        display: none;
+      }
+  }
+  
   .letter:nth-child(1):before {
     content: "$?2%_*@3<>4#1&";
     margin-top: -264px;
@@ -564,3 +590,164 @@
       margin-top: 60px;
     }
   }  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .content {
+    font-family: 'Audiowide';
+    color: #00c400;
+    font-size: xx-large;
+    position: relative;
+    text-transform: uppercase;
+  }
+  @keyframes glitch-anim-1 {
+    0% {
+      clip: rect(102px, 1000px, 10px, 0);
+    }
+    5.88235% {
+      clip: rect(90px, 1000px, 55px, 0);
+    }
+    11.76471% {
+      clip: rect(8px, 1000px, 54px, 0);
+    }
+    17.64706% {
+      clip: rect(90px, 1000px, 21px, 0);
+    }
+    23.52941% {
+      clip: rect(65px, 1000px, 76px, 0);
+    }
+    29.41176% {
+      clip: rect(94px, 1000px, 66px, 0);
+    }
+    35.29412% {
+      clip: rect(32px, 1000px, 97px, 0);
+    }
+    41.17647% {
+      clip: rect(1px, 1000px, 44px, 0);
+    }
+    47.05882% {
+      clip: rect(77px, 1000px, 111px, 0);
+    }
+    52.94118% {
+      clip: rect(97px, 1000px, 13px, 0);
+    }
+    58.82353% {
+      clip: rect(43px, 1000px, 47px, 0);
+    }
+    64.70588% {
+      clip: rect(29px, 1000px, 41px, 0);
+    }
+    70.58824% {
+      clip: rect(47px, 1000px, 91px, 0);
+    }
+    76.47059% {
+      clip: rect(91px, 1000px, 70px, 0);
+    }
+    82.35294% {
+      clip: rect(58px, 1000px, 2px, 0);
+    }
+    88.23529% {
+      clip: rect(115px, 1000px, 27px, 0);
+    }
+    94.11765% {
+      clip: rect(101px, 1000px, 53px, 0);
+    }
+    100% {
+      clip: rect(88px, 1000px, 54px, 0);
+    }
+  }
+  @keyframes glitch-anim-2 {
+    0% {
+      clip: rect(52px, 1000px, 73px, 0);
+    }
+    5.88235% {
+      clip: rect(74px, 1000px, 2px, 0);
+    }
+    11.76471% {
+      clip: rect(69px, 1000px, 47px, 0);
+    }
+    17.64706% {
+      clip: rect(112px, 1000px, 90px, 0);
+    }
+    23.52941% {
+      clip: rect(16px, 1000px, 19px, 0);
+    }
+    29.41176% {
+      clip: rect(6px, 1000px, 43px, 0);
+    }
+    35.29412% {
+      clip: rect(109px, 1000px, 25px, 0);
+    }
+    41.17647% {
+      clip: rect(47px, 1000px, 95px, 0);
+    }
+    47.05882% {
+      clip: rect(38px, 1000px, 1px, 0);
+    }
+    52.94118% {
+      clip: rect(32px, 1000px, 38px, 0);
+    }
+    58.82353% {
+      clip: rect(50px, 1000px, 18px, 0);
+    }
+    64.70588% {
+      clip: rect(19px, 1000px, 27px, 0);
+    }
+    70.58824% {
+      clip: rect(101px, 1000px, 99px, 0);
+    }
+    76.47059% {
+      clip: rect(52px, 1000px, 54px, 0);
+    }
+    82.35294% {
+      clip: rect(25px, 1000px, 18px, 0);
+    }
+    88.23529% {
+      clip: rect(42px, 1000px, 83px, 0);
+    }
+    94.11765% {
+      clip: rect(81px, 1000px, 32px, 0);
+    }
+    100% {
+      clip: rect(35px, 1000px, 42px, 0);
+    }
+  }
+  .content:before, .content:after {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: transparent;
+    clip: rect(0, 0, 0, 0);
+  }
+  .content:after {
+    left: 2px;
+    text-shadow: -1px 0 red;
+    animation: glitch-anim-1 2s infinite linear alternate-reverse;
+  }
+  .content:before {
+    left: -2px;
+    text-shadow: 2px 0 blue;
+    animation: glitch-anim-2 3s infinite linear alternate-reverse;
+  }
+  
