--- a/public/css/home.css
+++ b/public/css/home.css
@@ -44,12 +44,13 @@
         position: absolute;
         top: 10%;
         left: 50%;
-        width: 90%;
+        width: 100%;
         font-size: 0;
         transform: translate(-50%);
       }
       .letter{
         width: 30px;
+        line-height: 40px;
       }
       .wrapperMobile div{
         margin-bottom: 30px;
@@ -588,5 +589,24 @@
     }
     to {
       margin-top: 60px;
+    }
+  }
+
+  /* START THE SMALL TEXT */
+  #messenger {
+    color: rgb(0, 196, 0);
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: monospace;
+    font-size: 20px;
+    white-space: nowrap;
+    text-shadow: 0 2px 2px rgba(#000, 0.9);
+  }
+
+  @media screen and (max-width: 625px) {
+    #messenger {
+      top: 75%
     }
   }
