--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,5 +1,5 @@
 .contact {
-	background: url("../img/telAvivGray.png") no-repeat center center;
+	background: url("../img/snazzy.png") no-repeat center center;
 	background-size: cover;
 	height: 100%;
     overflow: hidden;
